<resources>
    <string name="app_name">MovieStage</string>
    <string name="content_movie_poster">movie poster</string>

    <string name="detail_title_release_date">Release Date</string>
    <string name="detail_title_vote_average">Vote Average</string>
    <string name="detail_title_overview">Overview</string>
    <string name="menu_popular_movie">Popular Movie</string>
    <string name="menu_top_rate_movie">Top Rate Movie</string>

    //Info for testing view
    <string name="detail_title_hint">SkyFall</string>
    <string name="menu_my_favorite_title">My Favorite</string>
    <string name="message_empty_data">Nothing Found !</string>
    <string name="detail_label">Detail</string>
    <string name="error_title_failur">Failure!</string>
    <string name="reviews_label">Reviews</string>
    <string name="btn_reviews">Show Reviews</string>
    <string name="btn_watch_trailer">Watch Trailer</string>
</resources>