<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetail">


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_poster_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/camera"
            android:scaleType="fitCenter"
            android:contentDescription="@string/content_movie_poster" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/huge_text"
            android:textColor="@color/yellow"
            android:text="@string/detail_title_hint"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"/>
    </FrameLayout>



    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/detail_title_release_date"
                android:textSize="@dimen/large_text"
                android:fontFamily="sans-serif-medium" />
            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/medium_text"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/detail_title_vote_average"
                android:textSize="@dimen/large_text"
                android:fontFamily="sans-serif-medium" />
            <TextView
                android:id="@+id/tv_vote_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/medium_text"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/detail_title_overview"
                android:textSize="@dimen/large_text"
                android:fontFamily="sans-serif-medium" />
            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/medium_text"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>